<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Demo8_shareprenActivity!</string>
    <string name="app_name">Demo8_sharepren</string>
    <string name="loginText">用户登录</string>
    <string name="unameText">请输入您的用户名</string>
    <string name="passText">请输入您的密码</string>
    <string name="btnText">马上登录</string>
    <string name="checkText">是否记住密码</string>

</resources>